terraform_vpc_advance/peering.tf
####vpc peering
resource "aws_vpc_peering_connection" "vpc_peering" {
  count = var.is_peering_required ? 1 : 0
  peer_vpc_id = aws_vpc.main.id
  vpc_id = var.requestor_vpc_id
  auto_accept = true
  tags = merge(
    var.common_tags,
    {
      Name = "Vpc Peering between default and ${var.project_name}-${var.env}"
    }
  )
}

resource "aws_route" "default_route" {
  count = var.is_peering_required ? 1 : 0
  route_table_id            = var.default_route_table_id
  destination_cidr_block    = var.cidr_block #roboshop cidr
  # since we set count parameter, it is treated as list, even single element you should write list syntax
  vpc_peering_connection_id = aws_vpc_peering_connection.vpc_peering[0].id
  #depends_on                = [aws_route_table.testing]
}

resource "aws_route" "public_peering" {
  count = var.is_peering_required ? 1 : 0
  route_table_id = aws_route_table.public.id
  destination_cidr_block = var.default_vpc_cidr
  vpc_peering_connection_id = aws_vpc_peering_connection.vpc_peering[0].id
}


resource "aws_route" "private_peering" {
  count = var.is_peering_required ? 1 : 0
  route_table_id = aws_route_table.private.id
  destination_cidr_block = var.default_vpc_cidr
  vpc_peering_connection_id = aws_vpc_peering_connection.vpc_peering[0].id
}

resource "aws_route" "database_peering" {
  count = var.is_peering_required ? 1 : 0
  route_table_id = aws_route_table.database.id
  destination_cidr_block = var.default_vpc_cidr
  vpc_peering_connection_id = aws_vpc_peering_connection.vpc_peering[0].id
}
